--- a/index.html
+++ b/index.html
@@ -4,43 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lookout :: The Legend of Pirates Online</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/bulmaswatch/lumen/bulmaswatch.min.css">
-    <link rel="icon" href="https://piratesonline.co/static/img/icons/favicon.ico"/>
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/bulmaswatch/lumen/bulmaswatch.min.css"/>
+
+    <link rel="stylesheet" href="style.css"/>
+    <link rel="icon" href="https://piratesonline.co/static/img/icons/favicon.ico"/>
 
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 
-    <style>.github-corner:hover .octo-arm {
-        animation: octocat-wave 560ms ease-in-out
-    }
-
-    @keyframes octocat-wave {
-        0%, 100% {
-            transform: rotate(0)
-        }
-        20%, 60% {
-            transform: rotate(-25deg)
-        }
-        40%, 80% {
-            transform: rotate(10deg)
-        }
-    }
-
-    @media (max-width: 500px) {
-        .github-corner:hover .octo-arm {
-            animation: none
-        }
-
-        .github-corner .octo-arm {
-            animation: octocat-wave 560ms ease-in-out
-        }
-    }
-
-    .box {
-        height: 100%;
-    }
-    </style>
 </head>
 <body>
 <a href="https://github.com/lungyiin/ocean-lookout/" class="github-corner" aria-label="View source on Github">
@@ -53,7 +25,6 @@
               fill="currentColor" class="octo-body"></path>
     </svg>
 </a>
-
 
 <section class="section">
     <div class="container">
@@ -81,33 +52,45 @@
                  v-bind:data-index="index">
                 <div role="list" class="columns">
                     <div v-for="ocean in group" class="column is-3">
-                        <div class="box">
-                            <h2 class="title is-5">{{ocean.name}}
-                                <span v-if="ocean.population < 100">
-                                <span class="tag is-success">{{ocean.population}}</span>
-                            </span>
-                                <span v-else>
-                                <span class="tag is-danger">{{ocean.population}}</span>
-                            </span>
+                        <span class="box">
+                            <h2 class="title is-5 level">
+                                <span classs="level-left">
+                                    {{ocean.name}}
+                                    <span v-if="ocean.population < 100">
+                                        <span class="tag is-success">{{ocean.population}}</span>
+                                    </span>
+                                    <span v-else>
+                                        <span class="tag is-danger">{{ocean.population}}</span>
+                                    </span>
+                                </span>
+
+                                <span classs="level-right">
+                                    <span v-if="ocean.fleet.type">
+                                        <span v-if="ocean.fleet.type = 'qar'">
+                                            <span class="tooltip"
+                                                  data-tooltip="The Queen Anne's Revenge is Currently Sailing">&#128305;</span>
+                                        </span>
+                                        <span v-else>
+                                            <span class="tooltip"
+                                                  data-tooltip="A Treasure Fleet is Sailing to Raven's Cove">&#128176;</span>
+                                        </span>
+                                    </span>
+                                </span>
                             </h2>
 
-                            <div v-if="ocean.fleet.type">
-                                <div v-if="ocean.fleet.type = 'qar'">
-                                    The Queen Anne's Revenge is Currently Sailing &#128305;
-                                </div>
-                                <div v-else>
-                                    A Treasure Fleet is Sailing to Raven's Cove &#128176;
-                                </div>
+                            <div class="has-text-grey-dark">
+                                Last restart {{ocean.created | formatTimeSince}}
                             </div>
-                        </div>
                     </div>
                 </div>
             </div>
-        </transition-group>
+    </div>
+    </transition-group>
     </div>
 </section>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
 <script>
     var API = 'https://api.piratesonline.co/shards';
 
@@ -189,7 +172,7 @@
     // Notification permissions
     var hasPermisisons = false;
 
-    function notifyMe() {
+    function allowNotifications() {
         // Let's check if the browser supports notifications
         if (!("Notification" in window)) {
             alert("This browser does not support system notifications");
@@ -211,6 +194,11 @@
         }
     }
 
+    Vue.filter('formatTimeSince', function (value) {
+        if (value) {
+            return moment(value, 'X').fromNow();
+        }
+    });
 
     var app = new Vue({
         el: '#app',
@@ -227,7 +215,7 @@
             }
         },
         created: function () {
-            notifyMe();
+            allowNotifications();
             setInterval(this.fetchOceanData, 5000)
         },
         methods: {
@@ -237,8 +225,11 @@
                     for (data in new_data[ocean]) {
                         if (this.oceans_grouped[ocean][data] !== new_data[ocean][data] && this.oceans_grouped[ocean]['name'] === new_data[ocean]['name']) {
 
-                            if(new_data[ocean][data]['type'] === 'qar' && new_data[ocean][data]['type'] !== this.oceans_grouped[ocean][data]['type'] && hasPermissions) {
-                                var notification = new Notification('Ocean Lookout', {body: 'The Queen Anne\'s Revenge has Sailed on ' + this.oceans_grouped[ocean]['name'], icon: 'https://piratesonline.co/static/img/PiratesWebsiteLogoSmall.png' })
+                            if (new_data[ocean][data]['type'] === 'qar' && new_data[ocean][data]['type'] !== this.oceans_grouped[ocean][data]['type'] && hasPermissions) {
+                                var notification = new Notification('Ocean Lookout', {
+                                    body: 'The Queen Anne\'s Revenge has Sailed on ' + this.oceans_grouped[ocean]['name'],
+                                    icon: 'https://piratesonline.co/static/img/PiratesWebsiteLogoSmall.png'
+                                })
                             }
 
                             this.oceans_grouped[ocean][data] = new_data[ocean][data];
